# Camera-Related-Learning

calibration/: 0010_calibrate_camera.py  0010_collect_calibration_images.py  0010_collect_calibration_imges.py  0020_calibrate_camera.py  0020_using_calibration.py  pyproject.toml  utils.py
calibration/libs/: utils.py
calibration/src/camera_epc/: calib_dataset_collector.py  calibrator.py  utils.py
calibration/tests/: CalibrationMatrixAndDistortions.py
pixel2worldPLANE/: 0010_pixel2chess_projection_TEST.py  0020_pixel2chess_interactive.py  0030_pixel2chess_projection.py  0035_img2world_usage.py  utils.py
pixel2worldPLANE/libs/: coordsys.py  show.py  utils.py
pixel2worldPLANE/tests/: 0030_pixel2chess_projection.py
