[project]
name = "camera-epc"
version = "0.1.0"
description = "Camera related learning: algorithms and calibratios"
authors = [
    {name = "evertismael",email = "evertismael@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "numpy (==2.2.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
